# diffusion_from_scratch

./: .gitignore  CLAUDE.md  README.md  diffusion.py  dit.py  flow_matching.py  pyproject.toml  sample.py  sample.sh  text_embedding.py  train.py  unet.py
outputs/: stack_outputs.py
